# mcp-health-python

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
examples/: basic_usage.py  custom_analysis.py
mcp_health/: __init__.py
mcp_health/core/: __init__.py  data_analysis.py  data_generator.py  visualization.py
mcp_health/data/: __init__.py  sample_datasets.py
mcp_health/utils/: __init__.py  config.py
tests/: test_data_analysis.py
